--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         }
         buildTypes.each {
             it.buildConfigField 'String', 'API_KEY', "\"AIzaSyD8koBB4whWRFnL9JVoRHp5DHpzJe8wiZo\""
-            it.buildConfigField 'String', 'MARVEL_API_KEY', "\"abde132cb2b298982ffd43c9fa565b8b\""
-        }
+            it.buildConfigField 'String', 'PUBLIC_MARVEL_API_KEY', "\"abde132cb2b298982ffd43c9fa565b8b\""
+            it.buildConfigField 'String', 'PRIVATE_MARVEL_API_KEY', "\"033f7bae63e4110f2f59d17b9d00c888f5a9583c\""        }
     }
 
     configurations.all {
